Revert "Suppress illegal access in plugin install (#41620)"
This reverts commit f8e5beec9a3a3c932c4360a97ce395d6deb22a64.